# hurl.lol

./: .env.example  .gitignore  CORS_TROUBLESHOOTING.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  schemas.py  sse.py
backend/app/routers/: admin.py  health.py  personas.py  posts.py  topics.py
backend/app/services/: personas.py  rng.py  topics.py  trends.py
backend/app/services/generator/: __init__.py  core.py  llm.py  metrics.py  styles.py
backend/app/store/: memory.py  sqlite.py
backend/app/utils/: ids.py
backend/fastapi/: __init__.py  responses.py  status.py
backend/fastapi/middleware/: cors.py
backend/fastapi/testclient/: __init__.py
backend/scripts/: hurlgen.py
backend/tests/: __init__.py  test_api.py  test_generator.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: ThemeToggle.tsx
frontend/contexts/: ThemeContext.tsx
frontend/lib/: sse.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
nginx/: DEPLOYMENT.md  README.md  hurl.lol.conf  yodo.lol.conf.template
